# weather-station-esp32

./: .gitignore  CMakeLists.txt  Makefile  genNvs.sh  sdkconfig  sdkconfig.old
components/cmds/: CMakeLists.txt  cmds.c  cmds.h
components/credentials/: CMakeLists.txt  cred.c  cred.h
components/enumstr/: CMakeLists.txt  enumstr.c  enumstr.h
components/hexstring/: CMakeLists.txt  hexstring.c  hexstring.h
components/hg_sensor/: CMakeLists.txt  Kconfig  hg_sensor.c  hg_sensor.h
components/mymqtt/: CMakeLists.txt  mymqtt.c  mymqtt.h
components/queue/: CMakeLists.txt  queue.c  queue.h
components/rain_gauge/: CMakeLists.txt  Kconfig  rain_gauge.c  rain_gauge.h
components/solar_sensor/: CMakeLists.txt  Kconfig  solar_sensor.c  solar_sensor.h
components/strswitch/: CMakeLists.txt  strswitch.h
components/temp_sensor/: CMakeLists.txt  Kconfig  temp_sensor.c  temp_sensor.h
components/vars/: CMakeLists.txt  djb2.h  hash  vars.c  vars.h  vars_hashed.c
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  console_task.h  main.c  towerlight-mail-esp.c
nvs/: nvs-template.csv
